<resources>
    <string name="app_name">Drinks</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_alcohol">Alcohol Content</string>
    <string name="menu_category">Category of Drink</string>
    <string name="menu_saved">Saved Drinks</string>
    <string name="nav_header_title">DRINKS</string>
    <string name="menu_close">Exit</string>
    <string name="menu_ingredient">Main Ingredient</string>
    <string name="menu_name">Name of Drink</string>
    <string name="name_screen_title">Find Your Drink </string>
    <string name="name_card_name">Enter Part of the Name</string>
    <string name="name_card_letter">Enter First Character</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_clear">CLEAR</string>
    <string name="instruction_name">Write the name of your drink </string>
    <string name="instruction_letter">Write the first character (letter or number)</string>
    <string name="menu_letter">First Character</string>
    <string name="drinkSaved">Drink Saved Successfully</string>
    <string name="drinkDeleted">Drink Deleted Succesfully</string>
</resources>
