<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame_background"
    android:orientation="vertical"
    tools:context="com.example.drinks.activitiesFragments.FragmentLetter">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/name_screen_title"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/letter_cardview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_letter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/name_card_letter"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/frg_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint=" "
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:autofillHints="none"
                android:maxLength="1"

                android:inputType="textCapCharacters" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="60dp">

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="30dp"
                    android:text="@string/btn_search"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="40dp"
                    android:text="@string/btn_clear"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/frg_name_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/instruction_letter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>